# trading-final

./: .gitignore  CHROMEDRIVER_FIX.md  CLAUDE.md  CLEANUP_SUMMARY.md  CPU_OPTIMIZATION_ANALYSIS.md  CPU_OPTIMIZATION_CONCLUSIONS.md  EVORL_PURE_GPU_IMPLEMENTATION.md  FAST_LEARNING_OPTIMIZATION.md  GPU_SETUP_SUCCESS.md  METAL_COMPATIBILITY_ANALYSIS.md  METAL_GPU_ANALYSIS.md  METAL_GPU_SUCCESS.md  MIGRATION_SUCCESS_SUMMARY.md  MONITORING_GUIDE.md  NETWORK_SIZE_OPTIMIZATION.md  OPTIMIZATIONS_COMPLETE.md  PATH_MIGRATION_SUMMARY.md  README.md  SPEED_OPTIMIZATION_SUCCESS.md  StockTradingEnv2.py  TECHNICAL_DOCUMENTATION.aux  TECHNICAL_DOCUMENTATION.html  TECHNICAL_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION.out  TECHNICAL_DOCUMENTATION.tex  TECHNICAL_DOCUMENTATION.toc  apply_gpu_optimization.py  common.py  common_paths.py  convert_to_pdf.py  cpu_core_analysis.py  cpu_vs_metal_comparison.py  data_preparation.py  evorl_compatibility_summary.md  evorl_complete_pipeline.py  evorl_data_preparation.py  evorl_integration.py  evorl_posterior_compatibility.py  evorl_ppo_trainer.py  evorl_quick_benchmark.py  (+33 more)
evorl/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
evorl/configs/: config.yaml  logging.yaml
evorl/configs/agent/: a2c.yaml  ddpg.yaml  ddqn.yaml  dqn.yaml  impala.yaml  pbt-ppo.yaml  ppo.yaml  random.yaml  sac.yaml  td3.yaml
evorl/docs/: build.sh  conf.py  index.md
evorl/docs/_static/: train_demo.py  workflow_api.py
evorl/docs/dev/: contributing.md
evorl/docs/guide/: installation.md  key-concepts.md  quickstart.md
evorl/docs/tutorial/: algorithms.md
evorl/evorl/: __init__.py  agent.py  distribution.py  metrics.py  rollout.py  rollout_ma.py  sample_batch.py  types.py
evorl/evorl/algorithms/: a2c.py  ddpg.py  dqn.py  impala.py  offpolicy_utils.py  ppo.py  random_agent.py  sac.py  td3.py
evorl/evorl/distributed/: __init__.py  comm.py  gradients.py  sharding.py
evorl/evorl/envs/: __init__.py  brax.py  env.py  envpool.py  gymnasium.py  gymnax.py  jaxmarl.py  jumanji.py  mujoco_playground.py  multi_agent_env.py  space.py  utils.py
evorl/evorl/evaluators/: __init__.py  ec_evaluator.py  episode_collector.py  evaluator.py  mo_brax_evaluator.py
evorl/evorl/networks/: __init__.py  layer_norm.py  linear.py  spectral_norm.py
evorl/evorl/recorders/: __init__.py  log_recorder.py  recorder.py  wandb_recorder.py
evorl/evorl/replay_buffers/: __init__.py  replay_buffer.py
evorl/evorl/utils/: ec_utils.py  jax_utils.py  ma_utils.py  orbax_utils.py  rl_toolkits.py  running_statistics.py
evorl/evorl/workflows/: __init__.py  (+3 more)
evorl/scripts/: hydra_utils.py  train.py  train_dist.py
evorl/tests/: conftest.py  test_a2c.py  test_brax_env.py  test_distribution.py  test_ec_operator.py  test_ec_utils.py  test_ec_workflow.py  test_env_wrapper.py  test_evaluator.py  test_impala.py  test_rollout.py  test_space.py  test_toolkits.py  utils.py
(+215 files in other folders)
