[tool.ruff]
line-length = 88
target-version = "py310"
src = ["evorl", "tests"]
include = ["evorl/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
extend-select = ["D"]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in public __init__ method
    "D417", # Requires documentation for every function parameter.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "evorl"
authors = [{ name = "Bowen Zheng", email = "bowen.zheng@protonmail.com" }]
description = "An efficient Evolutionary Reinforcement Learning Framework on Jax"
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "brax",
    "chex",
    "distrax",
    "evox<1.0.0",
    "gymnasium>=1.1.0",
    "hydra-core",
    "hydra-joblib-launcher",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "numpy",
    "optax",
    "orbax-checkpoint",
    "pandas",
    "scipy",
    "wandb",
]

[project.optional-dependencies]
gymnax = ["gymnax"]
jumanji = ["jumanji"]
jaxmarl = ["jaxmarl"]
mujoco-playground = ["playground"]
envpool = ["envpool", "numpy<2.0.0"] # also requires python<=3.11
gymnasium = ["gymnasium[atari,mujoco,classic-control,box2d]>=1.1.0"]
dev = [
    "furo",
    "myst-parser",
    "pre-commit",
    "pytest",
    "ruff",
    "sphinx",
    "sphinx-autodoc2",
    "sphinx-copybutton",
]

[build-system]
requires = ["setuptools >= 62.6"]       # to support `file` directive
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "evorl.__version__" }
dependencies = { file = ["requirements/requirements.txt"] }
optional-dependencies.dev = { file = ["requirements/requirements-dev.txt"] }

[tool.setuptools.packages.find]
include = ["evorl"]
namespaces = false
